链接：符号解析（三条原则）

--- a/深入理解计算机系统（3）.md
+++ b/深入理解计算机系统（3）.md
@@ -1033,6 +1033,119 @@ static void parse_sh(char *str, sh_entry_t *sh)
 }
 ```
 
+解析符号表
+
+```c
+// 解析符号表
+static void parse_symtab(char *str, st_entry_t *ste)
+{   
+    // st_name,bind,type,st_shndx,st_value,st_size
+    // sum,STB_GLOBAL,STT_FUNC,.text,0,22
+    char **cols; // address in stack
+    int num_cols = parse_table_entry(str, &cols);
+    assert(num_cols == 6);
+
+    assert(ste != NULL);
+    strcpy(ste->st_name, cols[0]);
+
+    // select symbol bind
+    if (strcmp(cols[1], "STB_LOCAL") == 0)
+    {
+        ste->bind = STB_LOCAL;
+    }
+    else if (strcmp(cols[1], "STB_GLOBAL") == 0)
+    {
+        ste->bind = STB_GLOBAL;
+    }
+    else if (strcmp(cols[1], "STB_WEAK") == 0)
+    {
+        ste->bind = STB_WEAK;
+    }
+    else
+    {
+        printf("symbol bind is nor LOCAL, GLOBAL nor WEAK\n");
+        exit(0);
+    }
+
+    // select symbol type
+    if (strcmp(cols[2], "STT_NOTYPE") == 0)
+    {
+        ste->type = STT_NOTYPE;
+    }
+    else if (strcmp(cols[2], "STT_OBJECT") == 0)
+    {
+        ste->type = STT_OBJECT;
+    }
+    else if (strcmp(cols[2], "STT_FUNC") == 0)
+    {
+        ste->type = STT_FUNC;
+    }
+    else
+    {
+        printf("symbol type is nor NOTYPE, OBJECT nor FUNC\n");
+        exit(0);
+    }
+
+    strcpy(ste->st_shndx, cols[3]);
+    ste->st_value = string2uint(cols[4]);
+    ste->st_size = string2uint(cols[5]);
+    
+    free_table_entry(cols, num_cols);
+}
+
+```
+
+##### 解析elf文件
+
+调用上面的解析节头表和符号表实现解析elf文件。
+
+```c
+void parse_elf(char *filename, elf_t *elf)
+{
+    assert(elf != NULL);
+    int line_count = read_elf(filename, (uint64_t)&(elf->buffer)); // filename文件读到elf->buffer中
+    
+    for (int i = 0; i < line_count; i ++)
+    {
+        printf("[%d]\t%s\n", i, elf->buffer[i]); // 有效行
+    }
+
+    // parse section header
+    int sh_count = string2uint(elf->buffer[1]);  // index = 1的行就是section header table的行数
+    elf->sht = malloc(sh_count * sizeof(sh_entry_t)); // 为每个SHT行（表项）分配内存
+
+    sh_entry_t *symt_sh = NULL;  // .symtab在section header table中的表项
+    for (int i = 0; i < sh_count; i ++)
+    {
+        parse_sh(elf->buffer[2 + i], &(elf->sht[i])); 
+        print_sh_entry(&(elf->sht[i]));
+
+        if (strcmp(elf->sht[i].sh_name, ".symtab") == 0)
+        {
+            // this is section header for symbol table
+            symt_sh = &(elf->sht[i]);
+        }
+    }
+
+    assert(symt_sh != NULL);
+
+    // parse symbol table 
+    elf->symt_count = symt_sh->sh_size;  // count of symbol table lines
+    elf->symt = malloc(elf->symt_count * sizeof(st_entry_t));
+    for (int i = 0; i < symt_sh->sh_size; i ++) // 遍历.symtab每一行
+    {
+        // 记得相对于.symtab表的首地址，所以加sh_offset
+        parse_symtab(
+            elf->buffer[i + symt_sh->sh_offset], 
+            &(elf->symt[i])); // 解析字符串(实际地址)到elf->symt[i]
+        print_symtab_entry(&(elf->symt[i]));
+    }
+
+}
+```
+
+
+
 ##### 解析结果展示
 
 待解析的文件`sum.elf.txt`
@@ -1042,6 +1155,185 @@ static void parse_sh(char *str, sh_entry_t *sh)
 解析结果
 
 ![image-20220128203439691](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220128203439691.png)
+
+
+
+#### 符号解析
+
+static linking
+
+定义`smap_t`类型: 用于管理符号映射
+
+```c
+typedef struct
+{
+	elf_t  		*elf; 	// src elf file
+    st_entry_t  *src; 	// src symbol
+    st_entry_t  *dst;  	// dst symbol: used for relocation
+
+} smap_t;
+```
+
+
+
+这里没有考虑complex resolution的情况：
+
+```c
+// file1.c
+int a  = 3;
+
+// file2.c
+long long a = 23234;
+```
+
+链接器ld进行符号解析的时候会选择使用哪个size的a，一般选用小的。
+
+也没有考虑 fatal resolution的情况：
+
+```c
+// file1.c
+int a = 3;
+
+// file2.c
+void a() {}
+```
+
+ 我们只考虑的是简单解析(simple resolution)。
+
+符号解析的原则
+
+Three rules:
+
+- rule 1: multiple strong symbols with the same name are not allowed.
+
+- rule 2: given a strong symbol and multiple weak symbols with the same name, choose the strong symbol.
+
+- rule 3: given multiple weak symbols with the same name, choose any of the weak symbols.
+
+
+
+符号解析的代码
+
+```c
+static void simple_resolution(st_entry_t *sym, elf_t *sym_elf, smap_t *candidate)
+{
+    // sym: symbol from current elf file
+    // candidate: pointer to the internal map table slot: src -> dst
+
+    // Three rules:
+    // rule 1: multiple strong symbols with the same name are not allowed.
+    // rule 2: given a strong symbol and multiple weak symbols with the same name, choose the strong symbol.
+    // rule 3: given multiple weak symbols with the same name, choose any of the weak symbols.
+
+    // get the precedence
+    int pre1 = symbol_precedence(sym);
+    int pre2 = symbol_precedence(candidate->src);
+
+    // implement rule 1: conflict
+    if (pre1 == 2 && pre2 == 2)
+    {
+        debug_printf(DEBUG_LINKER, 
+            "symbol resolution: strong symbols \"%s\" is redeclared\n", sym->st_name);
+        exit(0);
+    }
+
+    //implement rule 3
+    if (pre1 != 2 && pre2 != 2){
+        // use the stronger as best match
+        if (pre1 > pre2)
+        {
+            candidate->src = sym;
+            candidate->elf = sym_elf;            
+        }
+        return;
+    }
+
+    // implement rule 2
+    if (pre1 == 2)
+    {
+        // select sym as best match
+        candidate->src = sym;
+        candidate->elf = sym_elf;
+    }
+}
+```
+
+符号解析的结果
+
+```bash
+// result:
+sum     1       2       .text   0       22
+bias    1       1       .data   2       1
+array   1       1       .data   0       2
+main    1       2       .text   0       10
+
+// main.elf.txt
+array   1       1       .data   0       2
+bias    1       1       .data   2       1
+main    1       2       .text   0       10
+sum     1       0       SHN_UNDEF       0       0
+
+// sum.elf.txt
+sum     1       2       .text   0       22
+bias    1       1       COMMON  8       8
+```
+
+这里sum 存在两种`SHN_UNDEF` 和` .text`，我们解析成` .text`，按照的是高优先级来做的。
+
+优先级的设置代码
+
+```c
+static inline int symbol_precedence(st_entry_t *sym)
+{
+    /*  we don't consider weak because it's very rare, 
+        and we don't consider local because it's not conflicting.
+
+            bind        type        shndx              prec
+            -------------------------------------------------
+            global      notype      undef               0 - undefined
+            global      object      common              1 - tentative             
+            global      object      data, bss, rodata   2 - defined
+            global      func        text                2 - defined
+
+            int a; // tentative  -> common
+            int a = 0;   -> .bss
+            int a = 2;   -> .data
+    */
+
+    assert(sym->bind == STB_GLOBAL);
+
+    // get precedence of the symbol
+
+    if (strcmp(sym->st_shndx, "SHN_UNDEF") == 0 && sym->type == STT_NOTYPE)
+    {
+        // Undefined: symbols referenced but not assigned  a storage address
+        return 0;
+    }
+
+    if (strcmp(sym->st_shndx, "COMMON") == 0 && sym->type == STT_OBJECT)
+    {
+        // Tentative: section to be decided after symbol resolution
+        return 1;
+    }
+
+    if ((strcmp(sym->st_shndx, ".text") == 0 && sym->type == STT_FUNC) ||
+        (strcmp(sym->st_shndx, ".data") == 0 && sym->type == STT_OBJECT) ||
+        (strcmp(sym->st_shndx, ".bss") == 0 && sym->type == STT_OBJECT) ||
+        (strcmp(sym->st_shndx, ".rodata") == 0 && sym->type == STT_OBJECT))
+    {
+        return 2;
+    }
+
+   debug_printf(DEBUG_LINKER, "symbol resolution: connot determine the symbol \"%s\" \'s precedence", sym->st_name);
+   exit(0);
+}
+```
+
+
+
+
+
+
 
 ### 其他记录
 
