完成section的合并，make link查看sum和main两个elf.txt合并的结果

--- a/深入理解计算机系统（3）.md
+++ b/深入理解计算机系统（3）.md
@@ -1200,7 +1200,7 @@ void a() {}
 
  我们只考虑的是简单解析(simple resolution)。
 
-符号解析的原则
+##### 符号解析的原则
 
 Three rules:
 
@@ -1212,7 +1212,7 @@ Three rules:
 
 
 
-符号解析的代码
+##### 符号解析的代码
 
 ```c
 static void simple_resolution(st_entry_t *sym, elf_t *sym_elf, smap_t *candidate)
@@ -1258,7 +1258,7 @@ static void simple_resolution(st_entry_t *sym, elf_t *sym_elf, smap_t *candidate
 }
 ```
 
-符号解析的结果
+##### 符号解析的结果
 
 ```bash
 // result:
@@ -1331,7 +1331,338 @@ static inline int symbol_precedence(st_entry_t *sym)
 
 
 
+merge section
 
+合并的过程
+
+
+
+<img src="https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220203212704846.png" alt="image-20220203212704846" style="zoom:50%;" />
+
+来源：yangmin
+
+dst结构：从上到下
+
+```
+line_count
+sh_count 
+SHT table
+Section（.text, .data, .symtab, etc.）
+
+```
+
+就是这个结构:
+
+```bash
+// ------------------------------- //
+// elf file content
+// ------------------------------- //
+
+// lines of elf file (witout comments and white line): [0] - [0]
+22
+
+// lines of the following section header tables: [1] - [1]
+3
+
+// section header
+// sh_name,sh_addr,sh_offset,sh_size
+.text,0x0,5,10
+.data,0x0,15,3
+.symtab,0x0,18,4
+
+// .text
+// main()
+push   %rbp
+mov    %rsp,%rbp
+sub    $0x10,%rsp
+mov    $0x2,%esi
+lea    0x0000000000000000(%rip),%rdi    // 14 <main+0x14>
+callq  0x0000000000000000   // <main+0x19>, place holder for sum
+mov    %rax,-0x8(%rbp)
+mov    -0x8(%rbp),%rax
+leaveq
+retq
+
+// .data
+0x0000000012340000
+0x000000000000abcd
+0x0000000f00000000
+
+// .symtab
+// st_name,bind,type,st_shndex,st_value,st_size
+array,STB_GLOBAL,STT_OBJECT,.data,0,2
+bias,STB_GLOBAL,STT_OBJECT,.data,2,1
+main,STB_GLOBAL,STT_FUNC,.text,0,10
+sum,STB_GLOBAL,STT_NOTYPE,SHN_UNDEF,0,0
+```
+
+2022年2月4日13点37分继续
+
+
+
+计算section header
+
+遍历symbol table，获取对应section的行数。
+
+```c
+// compute dst Section Header Table and write into buffer
+// UPDATE section header table: compute runtime address of each section
+// UPDATE buffer(as follows): 
+// 		EOF file header: file line count, section header table line count, section header table
+// compute running address of each section: .text, .rodata, .data, .symtab
+// eof starting from 0x00400000
+compute_section_header(dst, smap_table, &smap_count);
+```
+
+具体实现如下
+
+```c
+
+static void compute_section_header(elf_t *dst, smap_t *smap_table, int *smap_count)
+{
+    // we only have .text, .rodata, .data as symbols in the section
+    // .bss is not taking any section memory
+    int count_text = 0, count_rodata = 0, count_data = 0;
+    for (int i = 0; i < *smap_count; i ++)
+    {
+        // src 指向的是ELF中的symbol
+        st_entry_t *sym = smap_table[i].src;
+
+        if (strcmp(sym->st_shndx, ".text") == 0)
+        {
+            // .text section symbol
+            count_text += sym->st_size;   
+        }
+        else if (strcmp(sym->st_shndx, ".rodata") == 0)
+        {
+            // .rodata section symbol
+            count_rodata += sym->st_size;
+        }
+        else if (strcmp(sym->st_shndx, ".data") == 0)
+        {
+            // .data section symbol
+            count_data += sym->st_size;
+        }
+    }
+
+    // count the section with .symtab
+    dst->sht_count = (count_text != 0) + (count_rodata != 0) + (count_data != 0) + 1;
+    // count the total lines
+    // *smap_count is symtab_count
+    // the target dst: line_count, sht_count, sht, .text, .rodata, .data, .symtab
+    dst->line_count = 1 + 1 + dst->sht_count + count_text + count_rodata + count_data + *smap_count;
+    // print to buffer
+    sprintf(dst->buffer[0], "%ld", dst->line_count);
+    sprintf(dst->buffer[1], "%ld", dst->sht_count);
+
+    // compute the run-time address of the sections: compact in memory
+    uint64_t text_runtime_addr = 0x00400000;
+    uint64_t rodata_runtime_addr = text_runtime_addr + count_text * MAX_INSTRUCTION_CHAR * sizeof(char);
+    uint64_t data_runtime_addr = rodata_runtime_addr + count_rodata * sizeof(uint64_t);
+    uint64_t symtab_runtime_addr = 0; // For EOF, .symtab is not loaded into run-time memory but still on disk
+
+    // write the section header table
+    assert(dst->sht == NULL);
+    dst->sht = malloc(dst->sht_count * sizeof(sh_entry_t));
+
+    // write in .text, .rodata, .data order
+    // starter of  the offset
+    uint64_t section_offset = 1 + 1 + dst->sht_count;
+    int sh_index = 0;
+    sh_entry_t *sh = NULL;
+
+    if (count_text > 0)
+    {
+        // get the pointer
+        assert(sh_index < dst->sht_count);
+        sh = &(dst->sht[sh_index]);
+
+        // write the fields
+        strcpy(sh->sh_name, ".text");
+        sh->sh_addr = text_runtime_addr;
+        sh->sh_offset = section_offset;
+        sh->sh_size = count_text;
+
+        // write to buffer
+        sprintf(dst->buffer[1 + 1 + sh_index], "%s,0x%lx,%ld,%ld",
+            sh->sh_name, sh->sh_addr, sh->sh_offset, sh->sh_size);
+
+        // update the index
+        sh_index ++;
+        section_offset += sh->sh_size;
+    }
+    // else count_text == 0: skip
+
+    if (count_rodata > 0)
+    {
+        // get the pointer
+        assert(sh_index < dst->sht_count);
+        sh = &(dst->sht[sh_index]);
+
+        // write the fields
+        strcpy(sh->sh_name, ".rodata");
+        sh->sh_addr = rodata_runtime_addr;
+        sh->sh_offset = section_offset;
+        sh->sh_size = count_rodata;
+
+        // write to buffer
+        sprintf(dst->buffer[1 + 1 + sh_index], "%s,0x%lx,%ld,%ld",
+            sh->sh_name, sh->sh_addr, sh->sh_offset, sh->sh_size);
+
+        // update the index
+        sh_index ++;
+        section_offset += sh->sh_size;
+    }
+    // else count_rodata ==0: skip
+
+    if (count_data > 0)
+    {
+        // get the pointer
+        assert(sh_index < dst->sht_count);
+        sh = &(dst->sht[sh_index]);
+
+        // write the fields
+        strcpy(sh->sh_name, ".data");
+        sh->sh_addr = data_runtime_addr;
+        sh->sh_offset = section_offset;
+        sh->sh_size = count_data;
+
+        // write to buffer
+        sprintf(dst->buffer[1 + 1 + sh_index], "%s,0x%lx,%ld,%ld",
+            sh->sh_name, sh->sh_addr, sh->sh_offset, sh->sh_size);
+
+        // update the index
+        sh_index ++;
+        section_offset += sh->sh_size;
+
+    }
+    // else count_data == 0: skip
+
+    // .symtab
+    // get the pointer
+    assert(sh_index < dst->sht_count);
+    sh = &(dst->sht[sh_index]);
+
+    // write the fields
+    strcpy(sh->sh_name, ".symtab");
+    sh->sh_addr = 0;
+    sh->sh_offset = section_offset;
+    sh->sh_size = *smap_count;
+
+    // write to buffer
+    sprintf(dst->buffer[1 + 1 + sh_index], "%s,0x%lx,%ld,%ld",
+        sh->sh_name, sh->sh_addr, sh->sh_offset, sh->sh_size);
+
+    assert(sh_index + 1 == dst->sht_count);
+
+    // print and check
+    if ((DEBUG_VERBOSE_SET & DEBUG_LINKER) != 0)
+    {
+        printf("-----------------------\n");
+        printf("Destination ELF's SHT in Buffer:\n");
+        for (int i = 0; i < 2 + dst->sht_count; i ++)
+        {
+            printf("%s\n", dst->buffer[i]);
+        }
+    }
+}
+```
+
+
+
+目前merge section之前的测试结果
+
+```bash
+Destination ELF's SHT in Buffer:
+44  # total lines
+3	# section header table lines
+# section info
+# name, addr, section_offset, size
+.text,0x400000,5,32 
+.data,0x400800,37,3
+.symtab,0x0,40,4
+```
+
+#### section merge
+
+
+
+```c
+// merge the symbol content from ELF src into dst sections
+merge_section(srcs, num_srcs, dst, smap_table, &smap_count);
+```
+
+
+
+##### merge的测试结果
+
+```bash
+Destination ELF's SHT in Buffer:
+44
+3
+.text,0x400000,5,32
+.data,0x400800,37,3
+.symtab,0x0,40,4
+merging section '.text'
+        from source elf [0]
+                symbol 'sum'
+        from source elf [1]
+                symbol 'main'
+merging section '.data'
+        from source elf [0]
+        from source elf [1]
+                symbol 'array'
+                symbol 'bias'
+merging section '.symtab'
+        from source elf [0]
+        from source elf [1]
+----------------------
+after merging the sections
+44  # lines of ELF files
+3   # lines of secion header table
+.text,0x400000,5,32  # section header table
+.data,0x400800,37,3
+.symtab,0x0,40,4
+push   %rbp    			# content of .text: 32lines = 22 + 10 lines
+mov    %rsp,%rbp			# sum() function : 22 lines
+mov    %rdi,-0x18(%rbp)
+mov    %rsi,-0x20(%rbp)
+movq   $0x0,-0x8(%rbp)
+movl   $0x0,-0xc(%rbp)
+jmp    40
+mov    -0xc(%rbp),%eax
+lea    0x0(,%rax,8),%rdx
+mov    -0x18(%rbp),%rax
+add    %rdx,%rax
+mov    (%rax),%rax
+add    %rax,-0x8(%rbp)
+addl   $0x1,-0xc(%rbp)
+mov    -0xc(%rbp),%eax
+cmp    %rax,-0x20(%rbp)
+ja     21
+mov    0x0(%rip),%rdx
+mov    -0x8(%rbp),%rax
+add    %rdx,%rax
+pop    %rbp
+retq
+push   %rbp					 # main() function : 10 lines
+mov    %rsp,%rbp
+sub    $0x10,%rsp
+mov    $0x2,%esi
+lea    0x0000000000000000(%rip),%rdi
+callq  0x0000000000000000
+mov    %rax,-0x8(%rbp)
+mov    -0x8(%rbp),%rax
+leaveq
+retq
+0x0000000012340000  # content of .data
+0x000000000000abcd
+0x0000000f00000000
+sum,STB_GLOBAL,STT_FUNC,.text,0,22     # content of .symtab
+main,STB_GLOBAL,STT_FUNC,.text,22,10
+array,STB_GLOBAL,STT_OBJECT,.data,0,2
+bias,STB_GLOBAL,STT_OBJECT,.data,2,1
+```
 
 
 
