update README.md for linking

--- a/深入理解计算机系统（3）.md
+++ b/深入理解计算机系统（3）.md
@@ -1594,7 +1594,7 @@ merge_section(srcs, num_srcs, dst, smap_table, &smap_count);
 
 
 
-##### merge的测试结果
+##### merge的结果展示
 
 ```bash
 Destination ELF's SHT in Buffer:
