Update urls of images for all the three .md files

--- a/深入理解计算机系统（2）.md
+++ b/深入理解计算机系统（2）.md
@@ -30,7 +30,7 @@ int main()
 
 对应的汇编模拟器输出：
 
-![image-20220122174138189](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122174138189.png)
+![image-20220122174138189](../images/image-20220122174138189.png)
 
 ## 第一次代码重构
 
@@ -162,13 +162,13 @@ uint64_t dubug_printf(uint64_t open_set, const char *format, ...);
 
 解析字符串的状态机分析图：
 
-![image-20220120170207502](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220120170207502.png)
+![image-20220120170207502](../images/image-20220120170207502.png)
 
 
 
 小括号：parenthesis
 
-![ ](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220108183234342.png)
+![ ](../images/image-20220108183234342.png)
 
 ### P11
 
@@ -274,7 +274,7 @@ c语言断言`assert`的使用
 
 
 
-![image-20220124111019795](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220124111019795.png)
+![image-20220124111019795](../images/image-20220124111019795.png)
 
 
 
@@ -457,7 +457,7 @@ static void sub_handler(od_t *src_od, od_t *dst_od, core_t *cr)
 
 根据下图：我们发现，cmp指令的实现逻辑就是sub(S2-S1)，可以借鉴sub指令实现过程。
 
-![image-20220122160904349](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122160904349.png)
+![image-20220122160904349](../images/image-20220122160904349.png)
 
 ```c
 static void cmp_handler(od_t *src_od, od_t *dst_od, core_t *cr)
@@ -528,7 +528,7 @@ static void jne_handler(od_t *src_od, od_t *dst_od, core_t *cr)
 
 
 
-![image-20220122163313863](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122163313863.png)
+![image-20220122163313863](../images/image-20220122163313863.png)
 
 ##### jmp指令实现
 
@@ -555,7 +555,7 @@ movq %rbp, %rsp
 popq %rbp
 ```
 
-![image-20220122170204892](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122170204892.png)
+![image-20220122170204892](../images/image-20220122170204892.png)
 
 ```c
 static void leave_handler(od_t *src_od, od_t *dst_od, core_t *cr)
@@ -773,7 +773,7 @@ memory match
 
 目前为止，我们模拟了下图中蓝色框内的部分：指令周期的流程，这里采用的是定长指令集格式，每条指令长度为`64 * sizeof(char)`（这里是用字符数组的）。
 
-![image-20220122171532829](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220122171532829.png)
+![image-20220122171532829](../images/image-20220122171532829.png)
 
 *图片来源：yaaangmin*
 
