--- a/深入理解计算机系统（3）.md
+++ b/深入理解计算机系统（3）.md
@@ -27,7 +27,7 @@ ELF文件标准中把系统中采用ELF格式的文件归为4类
 
 `ELF header` 以一个`16B`的序列（该`16B`的序列称为魔数(`magic number`)）开始，描述了生成该文件的系统的字(word)的大小和字节顺序(大端机还是小端机)。
 
-![image-20220124123111103](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220124123111103.png)
+![image-20220124123111103](../images/image-20220124123111103.png)
 
 **目标文件**就是源代码编译后但未进行链接的那些中间文件（Windows下的`.obj`文件，Linux下的`.o`文件）。它和可执行文件的内容和结构相似，所以和可执行文件采用同一种格式存储。在Linux中，我们把可执行文件和目标文件统称为ELF文件。当然，还有**动态链接库**(`DLL`, Dynamic Linking Library)(Linux下的`.so`文件)和**静态链接库**(Static Linking Library)(Linux下的`.a`文件)都按照可执行文件格式存储，即ELF文件。
 
@@ -77,7 +77,7 @@ typedef struct
 
 由我们使用`hexdump`得到的二进制文件，使用十六进制打印出来（每行`16B`）：
 
-![image-20220124160748115](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220124160748115.png)
+![image-20220124160748115](../images/image-20220124160748115.png)
 
 这里展示前4行，即ELF header具体存储的内容（注意这里是小端机，低地址在前，高地址在后）：
 
@@ -154,11 +154,11 @@ typedef struct
 
 上面是我们自己根据结构体定义逐个匹配的，当然在系统中使用`readelf`命令也可以查看上述信息：
 
-![image-20220124170932767](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220124170932767.png)
+![image-20220124170932767](../images/image-20220124170932767.png)
 
 再来复习一下ELF可重定位目标文件的结构
 
-![image-20220124170306586](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220124170306586.png)
+![image-20220124170306586](../images/image-20220124170306586.png)
 
 
 
@@ -381,7 +381,7 @@ Symbol table '.symtab' contains 13 entries:
 
 这个ELF具体怎么工作的？在ELF header，根据`SHT`的偏移：`e_shoff`，找到section header table；在section header table，根据`sh_name`、`sh_offset`和`sh_size`找到具体的section。
 
-![image-20220124211003106](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220124211003106.png)
+![image-20220124211003106](../images/image-20220124211003106.png)
 
 #### 符号表`symtab`
 
@@ -425,7 +425,7 @@ typedef struct
 
 如何查看`systab`的内容？使用`readelf -s filename.o`，可以看到其具体表项。
 
-![image-20220125152441663](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220125152441663.png)
+![image-20220125152441663](../images/image-20220125152441663.png)
 
 
 
@@ -441,11 +441,11 @@ Section Headers:
 
 分析：在我们的文件`elf.o`中，`.symtab`文件的起始地址是`ox110`，大小是`0x138B`=`312B`,我们所显示的是每行16B，那么`16B* 19 +  8B = 312B`,**即`.symtab`文件需要19行外加半行，如下图白色部分**。而且`.symtab`的每个表项大小为`ox18B` = `24B`，而总大小除以每个表项的大小，就是表项的个数：`0x128 / 0x18 = 13`，正好就是13个表项。我们最关心的是上图的`data1,data2,func1,func2`四个表项。如何在下图白色部分找到上述的4个表项呢？注：下图的产生方法是`hexdump -C elf.o`
 
-![image-20220125155135226](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220125155135226.png)
+![image-20220125155135226](../images/image-20220125155135226.png)
 
 我们找到四个段，如下图所示白色部分，这是symtal最后4个表项。
 
-![image-20220125154241996](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220125154241996.png)
+![image-20220125154241996](../images/image-20220125154241996.png)
 
 
 
@@ -453,7 +453,7 @@ Section Headers:
 
 我们同时找出`strtab`表的内容
 
-![image-20220125164312929](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220125164312929.png)
+![image-20220125164312929](../images/image-20220125164312929.png)
 
 具体和symtab结构成员映射的结果为
 
@@ -503,7 +503,7 @@ func2
 
 
 
-<img src="https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220125165527299.png" alt="image-20220125165527299" style="zoom:50%;" />
+<img src="../images/image-20220125165527299.png" alt="image-20220125165527299" style="zoom:50%;" />
 
 *图片来源：yaaangmin*
 
@@ -635,7 +635,7 @@ $readelf -s c1.o	  #
 
 可以看到编译的效果：正如我们分析的那样，外部引用的函数和外部引用的全局变量，都是`(global, notype, undef)`。
 
-![image-20220125210712715](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220125210712715.png)
+![image-20220125210712715](../images/image-20220125210712715.png)
 
 
 
@@ -670,7 +670,7 @@ $ readelf -s s12.o
 
 链接的情况如下：
 
-![image-20220127100736743](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220127100736743.png)
+![image-20220127100736743](../images/image-20220127100736743.png)
 
 
 
@@ -700,7 +700,7 @@ $ readelf -s s1.o     # -s: Displays the information contained in the file's sec
 
 使用`__attrbute__((weak))`修饰的函数编译结果
 
-![image-20220127103054829](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220127103054829.png)
+![image-20220127103054829](../images/image-20220127103054829.png)
 
 
 
@@ -775,7 +775,7 @@ void g()
 
 测试结果
 
-![image-20220127113333691](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220127113333691.png)
+![image-20220127113333691](../images/image-20220127113333691.png)
 
 
 
@@ -826,7 +826,7 @@ void g()
 
 测试结果
 
-![image-20220127131510854](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220127131510854.png)
+![image-20220127131510854](../images/image-20220127131510854.png)
 
 
 
@@ -1000,7 +1000,7 @@ static void free_table_entry(char **ent, int n)
 
 ##### 对于`char ***ent`的理解
 
-![image-20220127215929848](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220127215929848.png)
+![image-20220127215929848](../images/image-20220127215929848.png)
 
 
 
@@ -1150,11 +1150,11 @@ void parse_elf(char *filename, elf_t *elf)
 
 待解析的文件`sum.elf.txt`
 
-![image-20220128203523609](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220128203523609.png)
+![image-20220128203523609](../images/image-20220128203523609.png)
 
 解析结果
 
-![image-20220128203439691](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220128203439691.png)
+![image-20220128203439691](../images/image-20220128203439691.png)
 
 
 
@@ -1337,7 +1337,7 @@ merge section
 
 
 
-<img src="https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220203212704846.png" alt="image-20220203212704846" style="zoom:50%;" />
+<img src="../images/image-20220203212704846.png" alt="image-20220203212704846" style="zoom:50%;" />
 
 来源：yangmin
 
