add bin directory for makefile, move images of md files from images folder to assets folder for typora uploading

--- a/learning_notes/第一次重构前笔记(P1-P9).md
+++ b/learning_notes/第一次重构前笔记(P1-P9).md
@@ -112,13 +112,13 @@ code main.txt
 功能：用vs code 打开main.txt
 ```
 
-![image-20220108142943103](../images/image-20220108142943103.png)
+![image-20220108142943103](./assets/image-20220108142943103.png)
 
 补充：`vscode`隐藏下面输出面板，快捷键是$ctrl + j$
 
 进程的内存空间具体划分
 
-![image-20220108144645115](../images/image-20220108144645115.png)
+![image-20220108144645115](./assets/image-20220108144645115.png)
 
 从下往上依次是：程序数据(.`data`, `.bss`等),往上依次是堆(`malloc`)，共享库，用户栈(`user stack`)，最上面是内核地址空间
 
@@ -151,11 +151,11 @@ int main()
 
 模仿下图的寄存器结构定义`reg`结构体。
 
-![image-20220108151341415](../images/image-20220108151341415.png)
+![image-20220108151341415](./assets/image-20220108151341415.png)
 
 `reg`寄存器举例
 
-![image-20220108151520089](../images/image-20220108151520089.png)
+![image-20220108151520089](./assets/image-20220108151520089.png)
 
 ```c
   union // union联合体，共享低地址内存
@@ -177,7 +177,7 @@ int main()
 static uint64_t decode_od(od_t od)
 ```
 
-![image-20220108183234342](../images/image-20220108183234342.png)
+![image-20220108183234342](./assets/image-20220108183234342.png)
 
 操作符，操作数，指令的结构体定义
 
@@ -350,7 +350,7 @@ void mov_mem_reg_handler(uint64_t src, uint64_t dst)
 
 
 
-![image-20220109204330189](../images/image-20220109204330189.png)
+![image-20220109204330189](./assets/image-20220109204330189.png)
 
 结构定义如下
 
@@ -689,7 +689,7 @@ void print_stack()
 
 图示的解释：
 
-![image-20220111204630622](../images/image-20220111204630622.png)
+![image-20220111204630622](./assets/image-20220111204630622.png)
 
 上图a中`rip = 0x400563`的值时当前指令call的地址，图b中栈顶值`rip = 0x400568`这是 return address(执行完call调用的函数之后，从该地址继续执行)。从这两个rip的数值我们可以看出`x86`架构的call指令占`5B`(两个rip的值作差得到)。图b中`rip`的值为call的子函数的入口地址。
 
@@ -749,7 +749,7 @@ void ret_handler(uint64_t src, uint64_t dst)
 
 push和pop原理
 
-![image-20220113190715991](../images/image-20220113190715991.png)
+![image-20220113190715991](./assets/image-20220113190715991.png)
 
 
 
@@ -792,7 +792,7 @@ void pop_handler(uint64_t src, uint64_t dst)
 
 
 
-![image-20220109204330189](../images/image-20220109204330189.png)
+![image-20220109204330189](./assets/image-20220109204330189.png)
 
 ## bug 积累
 
@@ -916,7 +916,7 @@ run:
 
 gcc编译选项
 
-![image-20220111144302794](../images/image-20220111144302794.png)
+![image-20220111144302794](./assets/image-20220111144302794.png)
 
 图片来源：https://blog.csdn.net/Ivan804638781/article/details/111996770
 
