Add orginal author's github link to the readme file

--- a/learning_notes/深入理解计算机系统（3）.md
+++ b/learning_notes/深入理解计算机系统（3）.md
@@ -58,8 +58,8 @@ ELF文件标准中把系统中采用ELF格式的文件归为4类
 ```c
 typedef struct
 {
-  unsigned char	e_ident[EI_NIDENT];	/* Magic number and other info */		// 128 bit
-  Elf64_Half	e_type;			/* Object file type */  					// 16 bit
+  unsigned char	e_ident[EI_NIDENT];	/* Magic number and other info */		// 128 bit = 16 Bytes
+  Elf64_Half	e_type;			/* Object file type */  					// 16 bits
   Elf64_Half	e_machine;		/* Architecture */			// 32 bit		
   Elf64_Word	e_version;		/* Object file version */  	// 32 bit
   Elf64_Addr	e_entry;		/* Entry point virtual address */  			// 64 bit
@@ -155,6 +155,10 @@ typedef struct
 上面是我们自己根据结构体定义逐个匹配的，当然在系统中使用`readelf`命令也可以查看上述信息：
 
 ![image-20220124170932767](./assets/image-20220124170932767.png)
+
+注：P16结束。
+
+
 
 再来复习一下ELF可重定位目标文件的结构
 
